--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext{
         moshi_version = '1.14.0'
         retrofit_version = '2.9.0'
+        koin_version = '3.4.3'
     }
 }
 plugins {
