--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
 
     // retrofit
     implementation("com.squareup.retrofit2:retrofit:$retrofit_version")
+    implementation("com.squareup.okhttp3:logging-interceptor:4.11.0")
 
     // koin
     implementation "io.insert-koin:koin-android:$koin_version"
