adding loading scenery

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation "io.insert-koin:koin-android:$koin_version"
     implementation "io.insert-koin:koin-core:$koin_version"
 
+    // lottie
+    implementation "com.airbnb.android:lottie:$lottie_version"
 
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
