--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         moshi_version = '1.14.0'
         retrofit_version = '2.9.0'
         koin_version = '3.4.3'
+        lottie_version = '6.1.0'
     }
 }
 plugins {
